<resources>
    <string name="app_name">ARMONA</string>
    <string name="title_activity_maps">Map</string>
    <string name="hint_destination">Enter destination</string>
    <string name="show_ar_text">Show in AR</string>
    <string name="show_map_text">Show on map</string>
    <string name="text_description_search_icon">search_icon</string>
    <string name="label_ar">Augment reality</string>
    <string name="label_map">Map</string>
    <string name="switch_button">button to switch between view</string>
    <string name="testPlaceholder">testtest</string>
    <string name="textview">TextView</string>
</resources>