<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation"
    app:startDestination="@id/titleFragment">
    <fragment
        android:id="@+id/titleFragment"
        android:name="com.arfist.armona.screen.title.TitleFragment"
        android:label="@string/app_name"
        tools:layout="@layout/title_fragment">
        <action
            android:id="@+id/action_titleFragment_to_mapFragment"
            app:destination="@id/mapFragment"
            app:enterAnim="@anim/fragment_fade_enter"
            app:popUpTo="@id/titleFragment" />
        <action
            android:id="@+id/action_titleFragment_to_arFragment"
            app:destination="@id/arFragment"
            app:enterAnim="@anim/fragment_fade_enter"
            app:popUpTo="@id/titleFragment" />
    </fragment>
    <fragment
        android:id="@+id/mapFragment"
        android:name="com.arfist.armona.screen.map.MapFragment"
        android:label="@string/label_map"
        tools:layout="@layout/map_fragment">
        <action
            android:id="@+id/action_mapFragment_to_arFragment"
            app:destination="@id/arFragment"
            app:popUpTo="@id/titleFragment" />
    </fragment>
    <fragment
        android:id="@+id/arFragment"
        android:name="com.arfist.armona.screen.ar.ArFragment"
        android:label="@string/label_ar"
        tools:layout="@layout/ar_fragment">
        <action
            android:id="@+id/action_arFragment_to_mapFragment"
            app:destination="@id/mapFragment"
            app:popUpTo="@id/titleFragment" />
    </fragment>
</navigation>