<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <data>
        <variable
            name="titleViewModel"
            type="com.arfist.armona.screen.title.TitleViewModel" />
    </data>

    <LinearLayout
        android:id="@+id/title_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFFFFF"
        android:gravity="center"
        android:orientation="vertical"
        tools:context=".screen.title.TitleFragment">

        <TextView
            android:id="@+id/text_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/app_name"
            android:textColor="#000000"
            android:textSize="68sp" />

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/autocomplete_fragment"
            android:name="com.google.android.libraries.places.widget.AutocompleteSupportFragment"
            android:layout_width="@dimen/search_box_width"
            android:layout_height="@dimen/search_box_height"
            android:layout_margin="15sp" />

        <!--        <FrameLayout-->
<!--            android:id="@+id/background"-->
<!--            android:layout_width="@dimen/search_box_width"-->
<!--            android:layout_height="@dimen/search_box_height">-->

<!--            <androidx.fragment.app.FragmentContainerView-->
<!--                android:id="@+id/autocomplete_fragment"-->
<!--                android:name="com.google.android.libraries.places.widget.AutocompleteSupportFragment"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_margin="15sp" />-->
<!--        </FrameLayout>-->

        <!--        <LinearLayout-->
<!--            android:id="@+id/search_box"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_gravity="center"-->
<!--            android:layout_margin="16sp"-->
<!--            android:orientation="horizontal">-->

<!--            <EditText-->
<!--                android:id="@+id/autocomplete_fragment"-->
<!--                android:name="com.google.android.libraries.places.widget.AutocompleteSupportFragment"-->
<!--                android:layout_width="@dimen/search_box_width"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_gravity="center"-->
<!--                android:ems="10"-->
<!--                android:hint="@string/hint_destination"-->
<!--                android:importantForAutofill="no"-->
<!--                android:inputType="textPersonName"-->
<!--                android:textSize="12sp" />-->

<!--            <ImageView-->
<!--                android:id="@+id/imageView"-->
<!--                android:layout_width="0dp"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_weight="1"-->
<!--                android:contentDescription="@string/text_description_search_icon"-->
<!--                android:src="@android:drawable/ic_menu_search" />-->

<!--        </LinearLayout>-->

        <Button
            android:id="@+id/button_ar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/show_ar_text"
            app:cornerRadius="@dimen/button_corner_radius" />

        <Button
            android:id="@+id/button_map"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/show_map_text"
            app:cornerRadius="@dimen/button_corner_radius" />

    </LinearLayout>
</layout>